<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    android:padding="0dp">

    <!-- Barra morada con bordes redondeados -->
    <View
        android:id="@+id/barraSuperior"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="0dp"
        android:background="@drawable/rounded_top_background"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Ícono de sol -->

    <!-- Fecha dentro de la barra -->
    <ImageView
        android:id="@+id/imgIconoSol"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/icono_sol"
        android:src="@drawable/ic_sun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barraSuperior" />

    <!-- Mensaje Motivacional -->

    <!-- Saludo después de la barra -->

    <!-- Subtexto del saludo -->

    <!-- Contador de tareas -->

    <!-- Progreso de tareas -->

    <!-- Lista de tareas -->

    <TextView
        android:id="@+id/txtFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/fecha"
        android:textColor="#2E3A59"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgIconoSol"
        app:layout_constraintStart_toEndOf="@id/imgIconoSol"
        app:layout_constraintTop_toTopOf="@id/imgIconoSol" />

    <TextView
        android:id="@+id/txtMotivacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Hoy es un gran día para avanzar hacia tus metas 🚀"
        android:textColor="#848484"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtFecha" />

    <TextView
        android:id="@+id/txtSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="@string/saludo"
        android:textColor="#2E3A59"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barraSuperior" />

    <TextView
        android:id="@+id/txtSubSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Ten un hermoso día"
        android:textColor="#848484"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSaludo" />


    <!-- Botón flotante -->

    <TextView
        android:id="@+id/txtContadorTareas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/tareas_completadas"
        android:textColor="#2E3A59"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSubSaludo" />


    <ProgressBar
        android:id="@+id/progresoTareas"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="7dp"
        android:layout_marginStart="16dp"
        android:max="100"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="@id/txtContadorTareas"
        app:layout_constraintStart_toEndOf="@id/txtContadorTareas"
        app:layout_constraintTop_toTopOf="@id/txtContadorTareas"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/txtMiDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:text="@string/mi_dia"
        android:textColor="#2E3A59"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtContadorTareas" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTareas"
        android:layout_width="288dp"
        android:layout_height="268dp"
        android:paddingTop="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintTop_toBottomOf="@id/txtMiDia"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="68dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAgregarTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/boton_agregar_tarea"
        android:src="@drawable/ic_add"
        app:backgroundTint="#6b3bf6"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="40dp" />

    <!-- Menú de navegación -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconTint="#848484"
        app:itemTextColor="#848484"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_navegacion" />

</androidx.constraintlayout.widget.ConstraintLayout>
